tests/rosetta/out/Haskell/caesar-cipher-2.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/caesar-cipher-2.hs:167:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/caesar-cipher-2.hs:160:1
                 /workspace/mochi/tests/rosetta/out/Haskell/caesar-cipher-2.hs:167:1
    |
167 | main = do
    | ^^^^
